# mcp-ip-guard-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/mcp_ip_guard/: __init__.py  anthropic_ranges.py  azure_ranges.py  fastly_ranges.py  guard.py  middleware.py  ranges.py
tests/: test_guard.py  test_middleware.py
